# algol_hw2

./: .gitattributes  .gitignore  CMakeLists.txt
candidate_set/: a_test.cs
check_answers/: main.py
data/: a_test.igraph
include/: backtrack.h  common.h
main/: main.cc
query/: a_test.igraph
src/: backtrack.cc
